feat: make login page responsive and hide image on small screens

--- a/client/src/globals.css
+++ b/client/src/globals.css
@@ -9,6 +9,8 @@
   --color-main: #aaaaaa;
   --color-accent: #f24547;
   --color-light-white: #ffdfda;
+
+  --breakpoint-xs: 30rem;
 }
 
 @layer base {
