feat: story view and progress bar

--- a/client/src/globals.css
+++ b/client/src/globals.css
@@ -53,6 +53,11 @@
   @apply rounded-md bg-clip-padding backdrop-filter backdrop-blur-xl;
 }
 
+  .no-scrollbar::-webkit-scrollbar {
+  display: none;
+}
+
+
 @layer components {
 
   header {
